# Web-Development

./: README.md  pyproject.toml
Django/Django_Shopping_list/Shopping_List/mylist/: models.py
Django/Django_Shopping_list/Shopping_List/mylist/templates/: shopping_list.html
Django/Django_Shopping_list/Shopping_List/shopping_list/: urls.py
Django/Django_webapp/django_project/blog/: models.py  urls.py
Django_Tut/Django_webapp/django_project/blog/: views.py
FastAPI/Project_3/: main.py  models.py
FastAPI/Project_3/routers/: admin.py  todos.py
Flask_Tut/: 01_basics.py  04_get_post.py  05_sessions.py  06_messageFlashing.py  07_sqlAlchemy.py  09_static_files.py  2_html_templates.py  part_1.py  second.py
Flask_Tut/templates/: 03_1_base.html  03_2_index.html  04_login.html  06_user.html  index.html
django/Django_webapp/django_project/django_project/: settings.py  urls.py
django/Django_webapp/django_project/users/: models.py
django/django-shopping-list/shopping-list/mylist/: views.py
django/django-shopping-list/shopping-list/shopping_list/: settings.py
django/django-webapp/django_project/users/: views.py
fastAPI/project1/: books.py
fastAPI/project2/: books2.py
fastAPI/project3/: database.py  main.py  todosapp.db
fastAPI/project3/routers/: auth.py  users.py
flask/: 02_html_templates.py  03_bootstrapTemplateInheritance.py  05_sessions.py  06_messageFlashing.py  07_sqlAlchemy.py  10_blueprints.py  readme.md
flask/templates/: 02_index.html  04_login.html  06_user.html  08_view.html  09_base.html  09_home.html
(+14 files in other folders)
