[project]
name = "web-development"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.3",
    "fastapi>=0.115.13",
    "flask>=3.1.1",
    "jose>=1.0.0",
    "passlib>=1.7.4",
    "sqlalchemy>=2.0.41",
    "starlette>=0.46.2",
    "uvicorn>=0.34.3",
]
